--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -3,39 +3,77 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "yarn build && netlify deploy -d out -p"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.10.0",
     "@marketicons/bist": "workspace:*",
     "@marketicons/bist-react": "workspace:*",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "autoprefixer": "10.4.20",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
-    "date-fns": "^3.6.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
+    "@marketicons/markets": "workspace:*",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-table": "^8.20.6",
+    "@tiptap/pm": "^2.11.2",
+    "@tiptap/react": "^2.11.2",
+    "@tiptap/starter-kit": "^2.11.2",
+    "@tremor/react": "^3.18.7",
+    "@types/qrcode": "^1.5.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "1.0.4",
     "framer-motion": "^12.4.3",
-    "lucide-react": "^0.475.0",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.473.0",
     "next": "15.1.5",
-    "postcss": "8.4.30",
+    "next-themes": "^0.4.4",
+    "prism-react-renderer": "^2.4.1",
+    "qrcode": "^1.5.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.7"
+    "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.0",
+    "sonner": "^1.7.2",
+    "styled-jsx": "^5.1.6",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "22.13.4",
-    "@types/react": "19.0.8",
+    "@types/leaflet": "^1.9.16",
+    "@types/leaflet-draw": "^1.0.11",
+    "@types/lodash": "^4.17.14",
+    "@types/node": "^22",
+    "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
-    "typescript": "5.2.2"
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8",
+    "eslint-config-next": "15.1.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
