--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -7,13 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "yarn build && netlify deploy -d out -p"
+    "deploy": "yarn build && netlify deploy -d apps/website/out -p"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@marketicons/bist": "workspace:*",
-    "@marketicons/bist-react": "workspace:*",
-    "@marketicons/markets": "workspace:*",
+    "@marketicons/bist": "*",
+    "@marketicons/bist-react": "*",
+    "@marketicons/markets": "*",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
