--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "packageManager": "yarn@3.6.4",
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev "
+    "dev": "turbo run dev",
+    "deploy:website": "turbo run deploy --filter=@marketicons/website"
   },
   "devDependencies": {
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
+    "sharp": "^0.33.5",
     "turbo": "^2.4.2"
   },
   "workspaces": [
     "apps/*",
     "packages/*"
-  ],
-  "dependencies": {
-    "axios": "^1.7.9",
-    "cheerio": "^1.0.0",
-    "sharp": "^0.33.5"
-  }
+  ]
 }
