--- a/packages/bist-react-native/package.json
+++ b/packages/bist-react-native/package.json
@@ -27,7 +27,7 @@
     "react-native-svg": ">=12.0.0"
   },
   "devDependencies": {
-    "@marketicons/bist": "workspace:*",
+    "@marketicons/bist": "*",
     "@testing-library/react-native": "^12.0.0",
     "@types/jest": "^29.0.0",
     "@types/react": "^18.2.0",
@@ -57,5 +57,8 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(react-native|@react-native|react-native-svg)/)"
     ]
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
