--- a/packages/bist-react/package.json
+++ b/packages/bist-react/package.json
@@ -24,8 +24,8 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@marketicons/bist": "workspace:*",
-    "@marketicons/markets": "workspace:*"
+    "@marketicons/bist": "*",
+    "@marketicons/markets": "*"
   },
   "devDependencies": {
     "@swc/core": "^1.10.16",
